Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjTextObjWrapped.quorum
class main
    action Main
        Text t
        t:setValue("text")
        Integer i = t
    end
end